Fixed spacing from label and select.

--- a/web/themes/ddd2016/css/components/form.css
+++ b/web/themes/ddd2016/css/components/form.css
@@ -207,6 +207,7 @@ select:focus {
 }
 
 .contact-form input,
+.contact-form select,
 .contact-form textarea {
   padding: 0.4em;
   margin-top: 0.5em;
